--- a/src/app/pages/management/providers/providers.component.html
+++ b/src/app/pages/management/providers/providers.component.html
@@ -1,30 +1,29 @@
-<style>
-  
-</style>
-
 <div class="main-container">
   <div class="control-menu">
-      <div class="form-menu">
-        <div class="row">
-          <h4 class="col-sm-8">Providers List</h4>
-          <div class="col-sm-2">
-            <a class="btn btn-outline-dark" style="border-radius: 0px;">Add</a>
+    <div class="form-menu">
+
+      <div class="row">
+        <h4 class="col-sm-8">Providers List</h4>
+        <div class="col-sm-2">
+          <button type="button" class="btn btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#exampleModalCenter">
+            Add
+          </button>
         </div>
       </div>
-          
-          <hr style="background-color: dimgray; height: 1px;" />
-              <div class="form-group">
-                  <label class="col-form-label" style="font-weight: bold">Search</label>
-                  <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
-              </div>
+      <hr style="background-color: dimgray; height: 1px;" />
+      
+      <div class="form-group">
+        <label class="col-form-label" style="font-weight: bold">Search</label>
+        <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
       </div>
-      <div>
-        <div class="pagination">
-          <a (click)="leftPage()">&laquo;</a>
-          <a>{{this.params.PageNumber}}</a>
-          <a (click)="rightPage()">&raquo;</a>
+    </div>
+    <div>
+      <div class="pagination">
+        <a (click)="leftPage()">&laquo;</a>
+        <a>{{this.params.PageNumber}}</a>
+        <a (click)="rightPage()">&raquo;</a>
       </div>
-      </div>
+    </div>
   </div>
 
   <div class="items-container">
@@ -35,14 +34,48 @@
             <a class="btn btn-outline-dark" style="border-radius: 0px;">Update</a>
             <a class="btn btn-outline-dark" style="border-radius: 0px;">Delete</a>
           </span>
-            <b>Name: </b><span>{{provider.Name}}</span>
+          <b>Name: </b><span>{{provider.Name}}</span>
         </div>
+      </div>
+      <div style="margin-top: 10px"></div>
     </div>
-    <div style="margin-top: 10px"></div>
+  </div>
+</div>
+
+<!--Modal-->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Adding Category</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="form" (ngSubmit)="addItem()">
+          <div class="form-group" [ngClass]="{invalid: form.get('name')?.touched && form.get('name')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="name">Name: </label>
+            <input class="form-control" style="border-radius: 0px;" id="name" type="text" formControlName="name">
+            <div class="validation" *ngIf="form.get('name')?.touched && form.get('name')?.invalid">
+              <small *ngIf="form.get('name')?.errors?.required">Enter field.</small>
+              <small *ngIf="form.get('name')?.errors?.email">Invalid field.</small>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit" (click)="addItem()" class="btn btn-outline-dark" style="border-radius: 0px;" [disabled]="form?.invalid || submitted" data-dismiss="modal">Add</button>
+            <button type="button" class="btn btn-outline-danger" style="border-radius: 0px;" data-dismiss="modal">Close</button>
+          </div>
+        </form>
+      </div>
+      <!--<div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>-->
     </div>
   </div>
 </div>
 
 <ng-template #loading>
-    <div>Loading...</div>
+  <div>Loading...</div>
 </ng-template>
