--- a/src/app/pages/management/products/products.component.html
+++ b/src/app/pages/management/products/products.component.html
@@ -39,18 +39,18 @@
           <div class="form-group row">
             <label class="col-sm-4 col-form-label" style="font-weight: bold">Category</label>
             <div class="col-sm-8">
-              <select *ngIf="categories | async as categories$; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
+              <select *ngIf="categories$ | async as categories; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
                 <option value="0">All</option>
-                <option *ngFor="let category of categories$" value="{{category.Id}}">{{category.Name}}</option>
+                <option *ngFor="let category of categories" value="{{category.Id}}">{{category.Name}}</option>
               </select>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-4 col-form-label" style="font-weight: bold">Provider</label>
             <div class="col-sm-8">
-              <select *ngIf="providers | async as providers$; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
+              <select *ngIf="providers$ | async as providers; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
                 <option value="0">All</option>
-                <option *ngFor="let provider of providers$" value="{{provider.Id}}">{{provider.Name}}</option>
+                <option *ngFor="let provider of providers" value="{{provider.Id}}">{{provider.Name}}</option>
               </select>
             </div>
           </div>
